--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
                 <li>Geologcation API</li>
                 <li>Making Friends/ Connection with main friends-making websites</li>
                 <li>Store</li>
-                <li>小妹一句(登陆之后,实现邮件、微信或者其他媒介推送)</li>
                 <li>Google Search API (within this website)</li>
                 <li>back-to-top</li>
             </ul>
@@ -154,7 +153,7 @@
 
     </div>
     <div class="panel-footer">
-        <address>15 Corporate Pl S #333, Piscataway Township, NJ 08854</address>
+        <address>16823 NE 89th St., Redmond, WA 98052</address>
     </div>
     </div>
 
